# bloom

./: .gitignore  CLAUDE.md  PLAN.md  README.md  RELAY_INTEGRATION_PLAN.md  SYNC_PLAN.md  build_apk.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ANDROID_BACKGROUND_SERVICE.md
scripts/: build.sh
src/: app.js  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  http_server.rs  lib.rs  main.rs  nostr.rs  reminders.rs  storage.rs  sync.rs
src-tauri/src/buds/: bud01.rs  bud02.rs  bud03.rs  bud04.rs  bud05.rs  bud06.rs  bud07.rs  bud08.rs  bud09.rs  bud10.rs  mod.rs
src-tauri/src/commands/: app.rs  mod.rs
src-tauri/src/commands/nostr/: calendar.rs  keys.rs  messages.rs  mod.rs  models.rs  profile.rs  rsvp.rs  utils.rs
src-tauri/src/mobile/: android.rs  ios.rs  mod.rs
src/app/: App.tsx
src/components/: BlossomServer.tsx  Calendar.tsx  CalendarSwitcher.tsx  ContactSelector.tsx  EditEventModal.tsx  InviteeList.tsx  NostrRelay.tsx  SendReminderModal.tsx  Settings.tsx  ViewEventModal.tsx
src/components/ui/: badge.tsx  button-variants.ts  button.tsx  dialog.tsx  input.tsx  label.tsx  multi-input.tsx  select.tsx  switch.tsx  textarea.tsx
src/components/views/: DayView.tsx  MonthView.tsx  NotificationsView.tsx  WeekView.tsx  YearView.tsx
src/hooks/: useCalendars.ts  useEvents.ts  useNotifications.ts  useRSVPs.ts
src/lib/: api.ts  nostr-utils.ts  store.ts  utils.ts
