[package]
name = "blossom"
version = "0.1.0"
description = "Blossom Protocol Server - Tauri Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["full"] }
bytes = "1"
futures = "0.3"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br", "fs"] }
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"
nostr = "0.30"
image = "0.25"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
